Revision history for {{$dist->name}}:

{{$NEXT}}
  [Documentation]
  - Bump copyright year.

  - Fix typo in Plack::Middleware::Security::Common POD.

v0.5.0    2021-10-19 16:55:34+01:00 Europe/London
  [Enhancements]
  - Add .yml files to the misc_extensions rule.

  - Add .mv and .mvc to the script_extensions rule.

  - Add ip_address_referer rule.

  [Documentation]
  - Gave an example of adding an exception to a rule, GH#3.

  [Tests]
  - Add text cases.

v0.4.4    2021-04-21 16:45:59+01:00 Europe/London
  [Enhancements]
  - Add more file extensions to script_extensions rule.

  [Tests]
  - Add author tests.

v0.4.3    2021-04-09 16:39:01+01:00 Europe/London
  [Enhancements]
  - Add more file extensions to script_extensions rule.

  - Add more extensions to the misc_extensions rule.

  [Documentation]
  - Bump copyright year.

v0.4.2    2020-07-31 14:35:48+01:00 Europe/London
  [Toolchain]
  - Add core modules in the prerequisites.

v0.4.1    2020-03-11 12:19:20+00:00 Europe/London
  [Enhancements]
  - Simplify unexpected_content rule.

  - New rule: require_content.

  - Updated rule: cgi_bin to incldue cgi_wrapper.

  - Updated rule: dot_files to include "../" in path or query string.

  - The HTTP status can be overridden without overriding the handler.

  - The log message includes the request method and HTTP status.

  [Documentation]
  - Fixed POD formatting.

  - Documented the format of the log message.

  - Added note about modsecurity.

v0.4.0    2020-03-09 17:37:21+00:00 Europe/London
  [Enhancements]
  - Added Plack::Middleware::Security::Common with some common
    filtering rules.

v0.3.1    2020-03-09 08:35:06+00:00 Europe/London
  [Bug Fixes]
  - Removed unused import of Plack::Util.

v0.3.0    2020-03-07 19:48:36+00:00 Europe/London
  [Enhancements]
  - HTTP::Exception is no longer a run-time prerequisite.

  [Bug Fixes]
  - Set minimum Perl to v5.10, since that is the minimum used by some
    of the prerequisites.

  [Tests]